turtleart.polygon7.Polygon7.scala.error
Compilation error:
Polygon7:4: error: value toInt is not a member of (Int, Int)
    droite((51,428571429).toInt)
                          ^